crates/walrus-parser/snapshots/var_type.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got

---
Ok(
    (
        [],
        Var(
            Var(
                Ident {
                    span: 0..1,
                    text: "Z",
                },
            ),
        ),
    ),
)
